<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgClose"
            android:layout_width="?attr/actionBarSize"
            android:layout_height="?attr/actionBarSize"
            android:layout_gravity="start"
            android:background="?selectableItemBackgroundBorderless"
            android:importantForAccessibility="no"
            android:padding="12dp"
            android:src="@drawable/ic_close"
            app:tint="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/sort"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            android:textColor="@color/black" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="bottom"
            android:background="@color/core_ui_light_gray" />

    </FrameLayout>

    <RadioGroup
        android:id="@+id/rgSort"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">

        <RadioButton
            android:id="@+id/rbOldToNew"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/old_to_new" />

        <RadioButton
            android:id="@+id/rbNewToOld"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_to_old" />

        <RadioButton
            android:id="@+id/rbPriceLowHigh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/price_low_to_high" />

        <RadioButton
            android:id="@+id/rbPriceHighLow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/price_high_to_low" />
    </RadioGroup>

    <Button
        android:id="@+id/btnApply"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/apply" />
</LinearLayout>